--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "crypto": "^1.0.1",
+    "ethers": "^6.6.0",
     "events": "^3.3.0",
     "expo": "~48.0.18",
     "expo-auth-session": "~4.0.3",
@@ -29,6 +30,7 @@
     "react-native-crypto": "^2.2.0",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-heroicons": "^3.2.0",
+    "react-native-particle-auth": "^0.13.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
