--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@metamask/sdk": "^0.3.2",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "crypto": "^1.0.1",
@@ -20,6 +21,7 @@
     "expo": "~48.0.18",
     "expo-auth-session": "~4.0.3",
     "expo-crypto": "~12.2.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "process": "^0.11.10",
@@ -30,7 +32,9 @@
     "react-native-crypto": "^2.2.0",
     "react-native-dropdown-select-list": "^2.0.4",
     "react-native-heroicons": "^3.2.0",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-particle-auth": "^0.13.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
