--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "stream": "^0.0.2",
     "stream-browserify": "^1.0.0",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-neumorphism": "^0.1.0",
     "web3.storage": "^4.5.4"
   },
   "devDependencies": {
